--- a/app/index.html
+++ b/app/index.html
@@ -64,7 +64,7 @@
         <div>
             <label for="dataCenter">Data Center</label>
             <div class="form-select">
-                <select id="dataCenter" name="city">
+                <select id="dataCenter" class="custom-select" name="city">
                     <option value="sanFrancisco">San Francisco</option>
                     <option value="newYork">New York</option>
                     <option value="seattle">Seattle</option>
@@ -76,7 +76,7 @@
         <div>
             <label for="desktopModel">Desktop Model</label>
             <div class="form-select">
-                <select id="desktopModel" name="model">
+                <select id="desktopModel" class="custom-select" name="model">
                     <option value="standard">Standard <span>(2Gb Memory, 1 CPU)</span></option>
                     <option value="turbo">Turbo <span>(4Gb Memory, 2 CPU)</span></option>
                     <option value="twinTurbo">Twin Turbo <span>(8Gb Memory, 2.8 CPU)</span></option>
@@ -87,7 +87,7 @@
         <div>
             <label for="domain">Domain</label>
             <div class="form-select">
-                <select id="domain" name="domain">
+                <select id="domain" class="custom-select" name="domain">
                     <option value="domainAlfa">Domain Alfa</option>
                     <option value="domainKilo">Domain Kilo</option>
                     <option value="domainZulu">Domain Zulu</option>
@@ -134,22 +134,20 @@
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
-    <script src="bower_components/selectivity/dist/selectivity-full.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='//www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
+        <script src="bower_components/jquery.selectBoxIt/src/javascripts/jquery.selectBoxIt.js"></script>
         <script src="scripts/main.js"></script>
+        <script>
+            $(function() {
+                var selectBox = $('.custom-select').selectBoxIt();
+            });
+        </script>
+
         <!-- endbuild -->
 </body>
 </html>
