--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <!-- endbuild -->
     <!-- build:js scripts/vendor/modernizr.js -->
     <script src="bower_components/modernizr/modernizr.js"></script>
@@ -110,8 +111,8 @@
                 <button type="reset" value="Cancel" class="btn--disabled" disabled>Cancel</button>
                 <span class="to-right">
                     <button type="submit" value="Save" class="btn">Save</button>
-                    <a href="javascript:void(0)" class="btn">< Back</a>
-                    <a href="javascript:void(0)" class="btn btn--disabled">Next ></a>
+                    <a href="javascript:void(0)" class="btn"><i class="fa fa-angle-left"></i> Back</a>
+                    <a href="javascript:void(0)" class="btn btn--disabled">Next <i class="fa fa-angle-right"></i></a>
                 </span>
             </div>
         </form>
